block visibility fix

--- a/css/scss/_480.scss
+++ b/css/scss/_480.scss
@@ -5,6 +5,12 @@ body {
 .only-320-block {
 	display: none;
 }
+.only-480-block {
+	display: block;
+}
+.only-320-block {
+	display: none;
+}
 
 // Header title block
 .main-title {
